--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     <p><strong>Nationality:</strong>Kenyan✅✅✅</p>
     <p><strong>Place of Birth:</strong>Kisumu</p>
     <p><strong>Reg.No:</strong>CT203/123871/25</p> 
-    <p><strong>Hobbies:</strong>⛹️‍♀️🏋️🚴🚵🏊‍♀️⚽🎼🎼😂😂</p>
+    <p><strong>Hobbies:</strong>⛹️‍♀️🏋️🚴🚵🏊‍♀️⚽🎼🎼</p>
     <img src="images/me.jpg" alt="name">
     </div>
    
