--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         div{
             font-size: 1em;
         }
+        img{
+            border-radius: 50px;
+            width: 300px;
+            height: 350px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3)
+        }
+        img:hover {
+            transform: scale(1.05);
+            transition: 0.3s;
+    }
         /* button{
             background-color: rgb(27, 167, 37);
             padding: 10px 20px;
